<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?mine_ice"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/nunito_sans"
            android:textColor="?attr/green"
            android:textSize="24sp"
            android:text="@string/check_in_description"/>


        <TextView
            android:layout_marginTop="8dp"
            style="@style/MyEventsTextView"
            android:text="@string/name"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextInput"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/edit_text_line_color"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                style="@style/MyEventsEditText"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_person"
                android:importantForAutofill="no"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            style="@style/MyEventsTextView"
            android:text="@string/email"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInput"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/edit_text_line_color"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                style="@style/MyEventsEditText"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.fneis.myevents.ui.widget.ButtonLoading
            android:id="@+id/checkInButton"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            app:text="@string/check_in" />



    </LinearLayout>

</androidx.core.widget.NestedScrollView>